removed id selectors in favor of data-attrs, more background gradient stuff, restyled the search input and attached the button, moved app-map into app-components

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
           <h3>Places Thing-a-ma-hooey</h3>
       </div>
       <div class="c-container">
-          <div data-region="map" class="app-map" id="map"></div>
-          <div class="app-searchContainer u-center--horizonal">
-              <input data-element="place-search" class="c-input c-input--fullWidth" type="text" value="" id="searchBar" >
-              <button data-action="submit-search" class="c-btn c-btn--fullWidth" onclick="search()">Submit</button>
+          <div data-region="map" class="app-places-map u-marginV--md"></div>
+          <div class="app-searchForm u-center--horizonal">
+              <input data-element="place-search" class="c-input c-input--fullWidth app-searchForm__input" type="text">
+              <button data-action="submit-search" class="c-btn c-btn--fullWidth app-searchForm__btn">Submit</button>
           </div>
       </div>
     </div>
