--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
       <div class="c-navbar u-textAlign--center">
-          <h3>Places Thing-a-ma-hooey</h3>
+          <h3 class="u-textColor--white">Places Thing-a-ma-hooey</h3>
       </div>
       <div class="c-container">
           <div data-region="map" class="app-places-map u-marginV--md"></div>
